<resources>
    <string name="app_name">BusTrackingApp</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="title_activity_tracker_dashboard">Dashboard</string>
    <string name="save">Save</string>
    <string name="title_activity_tracker_dashboard_with_menu">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Driver mode</string>
    <string name="myprofile">My Profile</string>
    <string name="select_bus">Select Bus</string>
</resources>
